<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_gradient"
    android:layoutAnimation="@anim/layout_bounce"
    tools:context=".ViewController.PostMsgActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activityPost_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_hint_normal"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor"/>

            <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/activityPost_post"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postAsClass"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/activityPost_postAsIns"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postAsInstitution"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
