<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_gradient"
    android:fitsSystemWindows="true"
    android:layoutAnimation="@anim/layout_bounce"
    tools:context="com.Aaronatomy.Quiz.ViewController.MakeReminderActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/makeReminder_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTrans"
                android:hint="@string/hintMakeReminder"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor"/>

            <DatePicker
                android:id="@+id/makeReminder_datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

            <TimePicker
                android:id="@+id/makeReminder_timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

            <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/makeReminder_buttonMake"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/makeReminder"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/makeReminder_buttonCancel"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/colorAlert"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
